
- :meth:`Environment.keys` is now a iterator to match :meth:`dict.keys`,
  also an interator in Python 3.

- target version of `ggplot2` library is 2.2.0. 

Bugs fixed
----------

- :func:`numpy.float128` is not available on all platforms. The unit test
  for it is now skipped on systems where it is not present (issue #347)

- R pairlist objects can now be sliced (and issue #380 is resolved).


Release 2.8.5
=============

Bugs fixed
----------

- The defintion of the method :class:`rpy2.rlike.container.OrdDict.items`
  was incorrect, and so was the documentation for `rcall` (issue #383)
  

Release 2.8.4
=============

Bugs fixed
----------

- The context manager :func:`rpy2.robjects.lib.grdevices.render_to_file`
  is no longer trying to impose a file name generated by :mod:`tempfile`
  (issue #371)

- The symbol `LISTSXP` (corresponding to R pairlist objects) was not
  imported from the C module in rpy2.

- The functions `scale_linetype_discrete` and `scale_linetype_continuous`
  in ggplot2 were not wrapped by :mod:`rpy2.robjects.lib.ggplot2`
  (issue #381)


Release 2.8.3
=============

Bugs fixed
----------

- Fixed the error when the transformation of R "man" pages into Python
  docstrings was failing when the section "arguments" was missing
  (issue #368)
  
- Failing to find R in the PATH during the installation of rpy2
  is now printing an error message instead of a warning (issue #366)
  
  
Release 2.8.2
=============

Bugs fixed
----------

- R's `dplyr::src_dt` was moved to `dtdplyr::src_dt` with `dplyr` release 0.5.0.
  To address this, `src_dt` will become a `None` if the R package `dplyr` is
  discovered to be of version >= 0.5.0 at runtime. (issue #357)

- Conversion issue when R symbols were accessed as attribute of the singleton
  :class:`rpy2.robjects.R`. (issue #334)

- The `rmagic` extension for `ipython` was no longer loading with the latest
  ipython (version 5.0.0). (issue #359)
  
Changes
-------
