@@ -41,6 +41,10 @@ Bugs fixed
 
 - R pairlist objects can now be sliced (and issue #380 is resolved).
 
+- Giving an empty sequence to :meth:`robjects.sequence_to_vector` is now
+  raising a :class:`ValueError` rather than fail with an
+  :class:`UnboundLocalError` (see issue #388).
+  
 
 Release 2.8.5
 =============
